# KGen

./: .gitattributes  .gitignore  README.md  example.py  pyproject.toml  setup.py  titpop-test.py
docs/tgts/: README.md
kgen/: formatter.py  generate.py  logging.py  metainfo.py  models.py  patch.py  utils.py
kgen/executor/: tipo.py  titpop.py
kgen/tag-list/: copyrights.txt  meta.txt
scripts/: example.py  explanation.md  mcts_test.py  merge-images.py  test.py  tipo-test.py
scripts/benchmark/: model_speed.py
scripts/exp/: corrupt.ipynb  data.ipynb  img_gen_coyo.py  img_gen_gbc.py  img_gen_test.py  oai-inference-coyo.py  tipo-inference-coyo.py  tipo-inference-dan.py  tipo-inference-gbc.py  vendi-sim-metric-tgts.ipynb  vendi-sim-metric.ipynb
scripts/exp/tgts/: README.md  dig_download.py  dig_gen.py  fd_text.py  make_grid.py  vendi-sim-metric-tgts-img.ipynb  vendi-sim-metric-tgts.ipynb  vendi-sim-metric.ipynb
scripts/exp/tgts/benchmark/: aesthetic.py  aicorrupt.py  fd_img.py  vendi_img.py  vendi_text.py
scripts/exp/tgts/inference/: beam.py  cg-mcts.py  nucleus.py  rw-mcts.py
scripts/exp/tgts/stat/: aesthetic.ipynb  corrupt.ipynb  nfe-graph.ipynb  vendi-sim-metric-tgts.ipynb
scripts/exp/tipo/: corrupt.ipynb  data.ipynb  img_gen_coyo-g2f.py  img_gen_coyo.py  img_gen_dan.py  img_gen_test.py  oai-inference-coyo.py  oai-inference-scenery.py  oai_prompt_gen.py  tipo-inference-coyo.py  tipo-inference-dan.py  tipo-inference-gbc.py  vendi-sim copy.ipynb  vendi-sim.ipynb
scripts/metrics/: aesthetic.py  aicorrupt.py  fid.py  vendi.py
scripts/sampling/: MAGIC.py  MAGIC_old.py  MAGIC_v2.py  dfsTopN.py  explanation.md
src/kgen/: formatter.py  generate.py  metainfo.py  models.py  patch.py  utils.py
src/kgen/executor/: dtg.py  tipo.py
src/kgen/sampling/: __init__.py  beam.py  cg_mcts.py  mcts.py  node_splitters.py  rw_mcts.py
src/kgen/tag-list/: copyrights.txt  meta.txt
src/kgen_exp/: diff.py  img_utils.py  meta.py
src/kgen_exp/metrics/: aesthetic.py  aicorrupt.py  base.py  clip.py  fd_text.py  fid.py  text_dist.py  vendi.py  vendi_impl.py  vendi_text.py
