[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titpop-kgen"
version = "0.1.0"
description = "TITPOP: Text to Image with Text Presampling for Optimal Prompting"
authors = [
    { name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers",
    "huggingface_hub",
    "torch",
]
urls = { "Homepage" = "https://github.com/KohakuBlueleaf/KGen" }

[tool.setuptools.package-data]
kgen = ["**/*.txt"]

[tool.setuptools.packages.find]
include = ["*"]
