[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tipo-kgen"
version = "0.1.1"
description = "TIPO: Text to Image with text Presampling for Optimal prompting"
authors = [
    { name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers",
    "huggingface_hub",
    "torch",
]
urls = { "Homepage" = "https://github.com/KohakuBlueleaf/KGen" }

[project.optional-dependencies]
dev = [
    "orjson",
    "orjsonl",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
kgen = ["**/*.txt"]
